--- a/community/index.html
+++ b/community/index.html
@@ -36,9 +36,9 @@
 <!-- RDFa Metadata (in OpenGraph) -->
 <meta property="og:title" content="Community" />
 <meta property="og:author" content="https://www.qixiaodong.tk/index.html" />  <!-- Should be Liquid? URI? -->
-<meta property="http://ogp.me/ns/profile#first_name" content="Xiaodong"/>
-<meta property="http://ogp.me/ns/profile#last_name" content="Qi"/>
-<meta property="http://ogp.me/ns/article#published_time" content="" />
+<meta property="https://ogp.me/ns/profile#first_name" content="Xiaodong"/>
+<meta property="https://ogp.me/ns/profile#last_name" content="Qi"/>
+<meta property="https://ogp.me/ns/article#published_time" content="" />
 <meta property="og:site_name" content="The NoteBlog of Xiaodong Qi" /> <!-- Same as dc:source? -->
 <meta property="og:url" content="https://www.qixiaodong.tk/community/" />
 <meta property="og:type" content="website" />
@@ -276,7 +276,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/README.html"><i class="glyphicon glyphicon-info-sign"></i></a>
+      <a class="navbar-brand" href="https://www.qixiaodong.tk/README.html"><i class="glyphicon glyphicon-info-sign"></i></a>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -304,7 +304,7 @@
          
         </ul>
       <!-- Search site using Google's index -->
-        <form class="navbar-form navbar-right" role="search" method="get" action="http://google.com/search">
+        <form class="navbar-form navbar-right" role="search" method="get" action="https://google.com/search">
           <div class="form-group">
             <input type="hidden" name="q" value="site:https://www.qixiaodong.tk" />
             <input type="text" class="form-control search-query" name="q" placeholder="Search this site"/>
@@ -393,7 +393,7 @@
       <img src="https://www.qixiaodong.tk/assets/img/icon-github.png" alt="github"> Coding </a></h4>
        <div class="excerpt" height="300px">
            <div class="scroll">
-                <ul><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Correct some urls to use SSL. Initialize notes on domain name settings and SSL.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/8925077768...0f32a39660">07:28 2016/11/07</a></li><li>i2000s pushed to master at i2000s/i2000s.github.io: <em>Updating to 89250777687cba0238a72e7e6e4d15b654a31832.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/2a928e1b82...397bd33943">06:36 2016/11/07</a></li><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Update redirect links.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/4ddc38fb0a...8925077768">06:31 2016/11/07</a></li><li>i2000s pushed to master at i2000s/i2000s.github.io: <em>Updating to 4ddc38fb0a24fb5e8820551e43f40cf9dc0e39e6.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/85a8348b37...2a928e1b82">06:29 2016/11/07</a></li><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Add SSL certified domain name. More notes on using git for paper writing with collaborators.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/d22add5d01...4ddc38fb0a">06:24 2016/11/07</a></li></ul>
+                <ul><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Use https and lower javascript version from 3.1.0 to 2.2.4 to be comp…</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/0f32a39660...138cf00b1f">07:56 2016/11/07</a></li><li>i2000s pushed to master at i2000s/i2000s.github.io: <em>Updating to 0f32a396606fe3c2e4300b9383c1d6a0a491c982.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/397bd33943...5382cfad2d">07:33 2016/11/07</a></li><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Correct some urls to use SSL. Initialize notes on domain name settings and SSL.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/8925077768...0f32a39660">07:28 2016/11/07</a></li><li>i2000s pushed to master at i2000s/i2000s.github.io: <em>Updating to 89250777687cba0238a72e7e6e4d15b654a31832.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/2a928e1b82...397bd33943">06:36 2016/11/07</a></li><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Update redirect links.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/4ddc38fb0a...8925077768">06:31 2016/11/07</a></li></ul>
            </div>
        </div>
     </div>
@@ -423,25 +423,25 @@
          <div class="row">
             <div class="col-md-7 col-xs-9">
               <div class="row">
-               <a href="mailto:i2000s@hotmail.com" onClick="recordOutboundLink(this, 'Outbound Links', 'email'); return false;"><img src="/assets/img/icon-email.png" height="48px" alt="email"> </a>
-               <a href="https://github.com/i2000s" onClick="recordOutboundLink(this, 'Outbound Links', 'Github'); return false;"><img src="/assets/img/icon-github.png" height="40px" alt="github"> </a>
-               <a href="https://plus.google.com/+XiaodongQi"><img src="/assets/img/icon-gplus.png" height="40px" alt="G+"></a>
-               <a href="https://www.facebook.com/i2000s"><img src="/assets/img/icon-facebook.png" height="42px" alt="facebook"></a>
-               <a href="https://scholar.google.com/citations?user=6FdqHlIAAAAJ&hl=en"><img src="/assets/img/icon-scholar.png" height="40px" alt="GoogleScholar"></a>
-               <a href="https://twitter.com/i2000s"><img src="/assets/img/icon-twitter.png" height="45px" alt="Twitter"></a>
-               <a href="https://www.linkedin.com/in/xiaodongqi"><img src="/assets/img/icon-linkedin.png" height="40px" alt="LinkedIn"></a>
-               <a href="/atom.xml" onClick="recordOutboundLink(this, 'Outbound Links', 'RSS'); return false;"><img src="/assets/img/icon-rss.png" height="40px" alt="feed"></a>
-               <a href="https://physics.stackexchange.com/users/37682/xiaodong-qi"><img src="/assets/img/icon-stackoverflow.png" height="40px" alt="Physics Stackexchange"></a>
+               <a href="mailto:i2000s@hotmail.com" onClick="recordOutboundLink(this, 'Outbound Links', 'email'); return false;"><img src="https://www.qixiaodong.tk/assets/img/icon-email.png" height="48px" alt="email"> </a>
+               <a href="https://github.com/i2000s" onClick="recordOutboundLink(this, 'Outbound Links', 'Github'); return false;"><img src="https://www.qixiaodong.tk/assets/img/icon-github.png" height="40px" alt="github"> </a>
+               <a href="https://plus.google.com/+XiaodongQi"><img src="https://www.qixiaodong.tk/assets/img/icon-gplus.png" height="40px" alt="G+"></a>
+               <a href="https://www.facebook.com/i2000s"><img src="https://www.qixiaodong.tk/assets/img/icon-facebook.png" height="42px" alt="facebook"></a>
+               <a href="https://scholar.google.com/citations?user=6FdqHlIAAAAJ&hl=en"><img src="https://www.qixiaodong.tk/assets/img/icon-scholar.png" height="40px" alt="GoogleScholar"></a>
+               <a href="https://twitter.com/i2000s"><img src="https://www.qixiaodong.tk/assets/img/icon-twitter.png" height="45px" alt="Twitter"></a>
+               <a href="https://www.linkedin.com/in/xiaodongqi"><img src="https://www.qixiaodong.tk/assets/img/icon-linkedin.png" height="40px" alt="LinkedIn"></a>
+               <a href="/atom.xml" onClick="recordOutboundLink(this, 'Outbound Links', 'RSS'); return false;"><img src="https://www.qixiaodong.tk/assets/img/icon-rss.png" height="40px" alt="feed"></a>
+               <a href="https://physics.stackexchange.com/users/37682/xiaodong-qi"><img src="https://www.qixiaodong.tk/assets/img/icon-stackoverflow.png" height="40px" alt="Physics Stackexchange"></a>
                <iframe class="github-btn" src="//ghbtns.com/github-btn.html?user=i2000s&repo=i2000s.github.io&type=star&count=true&size=large" allowtransparency="true" frameborder="0" scrolling="0" width="150px" height="40px" style="vertical-align:middle; margin-top:9px;"></iframe>
               </div>
               <div class="row">
-                <span> &nbsp; </span> <span><a href="/CV-XiaodongQi.pdf"
+                <span> &nbsp; </span> <span><a href="https://www.qixiaodong.tk/CV-XiaodongQi.pdf"
                   onclick="var that=this;
                   _gaq.push(['_trackEvent','Download','PDF',this.href]);
                   setTimeout(function(){location.href=that.href;},200);
                   return false;" class = "btn btn-default"><i class="fa fa-file-text-o fa-1x"></i> CV of Xiaodong Qi</a></span>
                 <br><img alt="Creative Commons License" style="border-width:0" align="right" src="https://licensebuttons.net/l/by/3.0/88x31.png" />
-                <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Content</span> is licensed under the
+                <span xmlns:dct="https://purl.org/dc/terms/" property="dct:title">Content</span> is licensed under the
                 <a rel="license" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution License</a> or otherwise specified.
                 <br>
               </div>
@@ -449,7 +449,7 @@
 
            <div class="col-md-4 col-xs-3">
               <div class="row team-member" style="margin-top:-35px">
-              <img class="img-responsive img-thumbnail img-circle" width="200px" alt="" src="/assets/img/qi2016.jpg" align="middle">
+              <img class="img-responsive img-thumbnail img-circle" width="200px" alt="" src="https://www.qixiaodong.tk/assets/img/qi2016.jpg" align="middle">
               </div>
            </div>
          </div>
@@ -482,9 +482,9 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <!-- JQuery, used on a few pages as well as Bootstrap's Javascript plugins -->
     <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js" ></script>-->
-    <script src="//ajax.aspnetcdn.com/ajax/jQuery/jquery-3.1.0.min.js"></script>
+    <script src="//ajax.aspnetcdn.com/ajax/jQuery/jquery-2.2.4.min.js"></script>
     <script src="//cdn.jsdelivr.net/jquery.mixitup/latest/jquery.mixitup.min.js"></script>
-    <script src="/assets/js/mixitup-mine.js"></script>
+    <script src="https://www.qixiaodong.tk/assets/js/mixitup-mine.js"></script>
     <!-- Equations using MathJax -->
     <script type="text/javascript" src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <script type="text/x-mathjax-config"> MathJax.Hub.Config({ TeX: { equationNumbers: {autoNumber: "all"} } });       </script>
@@ -527,7 +527,7 @@
     //});
     </script>
     <!-- Twitter Bootstrap Javascript -->
-    <script src="/assets/js/bootstrap-collapse.js"></script> <!-- for collapsing navbar-->
+    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-collapse.js"></script> <!-- for collapsing navbar-->
     <!-- Unused Twitter Bootstrap Javascript
     <script src="https://www.qixiaodong.tk/assets/js/bootstrap-dropdown.js"></script>
     <script src="https://www.qixiaodong.tk/assets/js/google-code-prettify/prettify.js"></script>
@@ -547,7 +547,7 @@
     <!--<script src = "https://code.jquery.com/jquery.js"></script>-->
 
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src = "/assets/js/bootstrap.min.js"></script>
+    <script src = "https://www.qixiaodong.tk/assets/js/bootstrap.min.js"></script>
 
   </body>
 </html>
