--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 <!-- RDFa Metadata (in OpenGraph) -->
 <meta property="og:title" content="Xiaodong Qi's NoteBlog" />
 <meta property="og:author" content="https://www.qixiaodong.tk/index.html" />  <!-- Should be Liquid? URI? -->
-<meta property="http://ogp.me/ns/profile#first_name" content="Xiaodong"/>
-<meta property="http://ogp.me/ns/profile#last_name" content="Qi"/>
-<meta property="http://ogp.me/ns/article#published_time" content="" />
+<meta property="https://ogp.me/ns/profile#first_name" content="Xiaodong"/>
+<meta property="https://ogp.me/ns/profile#last_name" content="Qi"/>
+<meta property="https://ogp.me/ns/article#published_time" content="" />
 <meta property="og:site_name" content="The NoteBlog of Xiaodong Qi" /> <!-- Same as dc:source? -->
 <meta property="og:url" content="https://www.qixiaodong.tk/" />
 <meta property="og:type" content="website" />
@@ -71,9 +71,9 @@
 
     <!-- bootstrap style -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
-    <link href = "/assets/css/bootstrap.min.css" rel = "stylesheet">
+    <link href = "https://www.qixiaodong.tk/assets/css/bootstrap.min.css" rel = "stylesheet">
     <!-- Self-defined style -->
-    <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="https://www.qixiaodong.tk/assets/css/style.css">
 
     <script type="text/javascript">
 
@@ -104,22 +104,22 @@ var _hmt = _hmt || [];
     <link rel="alternate" type="application/rss+xml" title="The NoteBlog of Xiaodong Qi" href="/atom.xml" />
 
     <!-- favicon -->
-    <link rel="apple-touch-icon" sizes="57x57" href="/assets/img/favicon/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/assets/img/favicon/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/assets/img/favicon/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/assets/img/favicon/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/assets/img/favicon/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/assets/img/favicon/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/assets/img/favicon/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/assets/img/favicon/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="/assets/img/favicon/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/assets/img/favicon/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/assets/img/favicon/manifest.json">
+    <link rel="apple-touch-icon" sizes="57x57" href="https://www.qixiaodong.tk/assets/img/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="https://www.qixiaodong.tk/assets/img/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="https://www.qixiaodong.tk/assets/img/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="https://www.qixiaodong.tk/assets/img/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="https://www.qixiaodong.tk/assets/img/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="https://www.qixiaodong.tk/assets/img/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="https://www.qixiaodong.tk/assets/img/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="https://www.qixiaodong.tk/assets/img/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://www.qixiaodong.tk/assets/img/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="https://www.qixiaodong.tk/assets/img/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://www.qixiaodong.tk/assets/img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="https://www.qixiaodong.tk/assets/img/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://www.qixiaodong.tk/assets/img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="https://www.qixiaodong.tk/assets/img/favicon/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/assets/img/favicon/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="https://www.qixiaodong.tk/assets/img/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
   </head>
 
@@ -140,7 +140,7 @@ var _hmt = _hmt || [];
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/README.html"><i class="glyphicon glyphicon-info-sign"></i></a>
+      <a class="navbar-brand" href="https://www.qixiaodong.tk/README.html"><i class="glyphicon glyphicon-info-sign"></i></a>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -168,7 +168,7 @@ var _hmt = _hmt || [];
          
         </ul>
       <!-- Search site using Google's index -->
-        <form class="navbar-form navbar-right" role="search" method="get" action="http://google.com/search">
+        <form class="navbar-form navbar-right" role="search" method="get" action="https://google.com/search">
           <div class="form-group">
             <input type="hidden" name="q" value="site:https://www.qixiaodong.tk" />
             <input type="text" class="form-control search-query" name="q" placeholder="Search this site"/>
@@ -378,9 +378,9 @@ While optical fibers have been used for primary quantum communications, atom-fib
     <!-- Placed at the end of the document so the pages load faster -->
     <!-- JQuery, used on a few pages as well as Bootstrap's Javascript plugins -->
     <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js" ></script>-->
-    <script src="//ajax.aspnetcdn.com/ajax/jQuery/jquery-3.1.0.min.js"></script>
+    <script src="//ajax.aspnetcdn.com/ajax/jQuery/jquery-2.2.4.min.js"></script>
     <script src="//cdn.jsdelivr.net/jquery.mixitup/latest/jquery.mixitup.min.js"></script>
-    <script src="/assets/js/mixitup-mine.js"></script>
+    <script src="https://www.qixiaodong.tk/assets/js/mixitup-mine.js"></script>
     <!-- Equations using MathJax -->
     <script type="text/javascript" src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <script type="text/x-mathjax-config"> MathJax.Hub.Config({ TeX: { equationNumbers: {autoNumber: "all"} } });       </script>
@@ -423,7 +423,7 @@ While optical fibers have been used for primary quantum communications, atom-fib
     //});
     </script>
     <!-- Twitter Bootstrap Javascript -->
-    <script src="/assets/js/bootstrap-collapse.js"></script> <!-- for collapsing navbar-->
+    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-collapse.js"></script> <!-- for collapsing navbar-->
     <!-- Unused Twitter Bootstrap Javascript
     <script src="https://www.qixiaodong.tk/assets/js/bootstrap-dropdown.js"></script>
     <script src="https://www.qixiaodong.tk/assets/js/google-code-prettify/prettify.js"></script>
@@ -443,7 +443,7 @@ While optical fibers have been used for primary quantum communications, atom-fib
     <!--<script src = "https://code.jquery.com/jquery.js"></script>-->
 
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src = "/assets/js/bootstrap.min.js"></script>
+    <script src = "https://www.qixiaodong.tk/assets/js/bootstrap.min.js"></script>
 
     </body>
   </html>
