--- a/pubs/index.html
+++ b/pubs/index.html
@@ -43,9 +43,9 @@
 <!-- RDFa Metadata (in OpenGraph) -->
 <meta property="og:title" content="Vita" />
 <meta property="og:author" content="https://www.qixiaodong.tk/index.html" />  <!-- Should be Liquid? URI? -->
-<meta property="http://ogp.me/ns/profile#first_name" content="Xiaodong"/>
-<meta property="http://ogp.me/ns/profile#last_name" content="Qi"/>
-<meta property="http://ogp.me/ns/article#published_time" content="" />
+<meta property="https://ogp.me/ns/profile#first_name" content="Xiaodong"/>
+<meta property="https://ogp.me/ns/profile#last_name" content="Qi"/>
+<meta property="https://ogp.me/ns/article#published_time" content="" />
 <meta property="og:site_name" content="The NoteBlog of Xiaodong Qi" /> <!-- Same as dc:source? -->
 <meta property="og:url" content="https://www.qixiaodong.tk/pubs/" />
 <meta property="og:type" content="website" />
@@ -72,9 +72,9 @@
 
     <!-- bootstrap style -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
-    <link href = "/assets/css/bootstrap.min.css" rel = "stylesheet">
+    <link href = "https://www.qixiaodong.tk/assets/css/bootstrap.min.css" rel = "stylesheet">
     <!-- Self-defined style -->
-    <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="https://www.qixiaodong.tk/assets/css/style.css">
 
     <script type="text/javascript">
 
@@ -105,22 +105,22 @@ var _hmt = _hmt || [];
     <link rel="alternate" type="application/rss+xml" title="The NoteBlog of Xiaodong Qi" href="/atom.xml" />
 
     <!-- favicon -->
-    <link rel="apple-touch-icon" sizes="57x57" href="/assets/img/favicon/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/assets/img/favicon/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/assets/img/favicon/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/assets/img/favicon/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/assets/img/favicon/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/assets/img/favicon/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/assets/img/favicon/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/assets/img/favicon/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="/assets/img/favicon/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/assets/img/favicon/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/assets/img/favicon/manifest.json">
+    <link rel="apple-touch-icon" sizes="57x57" href="https://www.qixiaodong.tk/assets/img/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="https://www.qixiaodong.tk/assets/img/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="https://www.qixiaodong.tk/assets/img/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="https://www.qixiaodong.tk/assets/img/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="https://www.qixiaodong.tk/assets/img/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="https://www.qixiaodong.tk/assets/img/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="https://www.qixiaodong.tk/assets/img/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="https://www.qixiaodong.tk/assets/img/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://www.qixiaodong.tk/assets/img/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="https://www.qixiaodong.tk/assets/img/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://www.qixiaodong.tk/assets/img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="https://www.qixiaodong.tk/assets/img/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://www.qixiaodong.tk/assets/img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="https://www.qixiaodong.tk/assets/img/favicon/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/assets/img/favicon/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="https://www.qixiaodong.tk/assets/img/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
   </head>
 
@@ -141,7 +141,7 @@ var _hmt = _hmt || [];
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/README.html"><i class="glyphicon glyphicon-info-sign"></i></a>
+      <a class="navbar-brand" href="https://www.qixiaodong.tk/README.html"><i class="glyphicon glyphicon-info-sign"></i></a>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -169,7 +169,7 @@ var _hmt = _hmt || [];
          
         </ul>
       <!-- Search site using Google's index -->
-        <form class="navbar-form navbar-right" role="search" method="get" action="http://google.com/search">
+        <form class="navbar-form navbar-right" role="search" method="get" action="https://google.com/search">
           <div class="form-group">
             <input type="hidden" name="q" value="site:https://www.qixiaodong.tk" />
             <input type="text" class="form-control search-query" name="q" placeholder="Search this site"/>
@@ -224,11 +224,11 @@ var _hmt = _hmt || [];
 <a href="https://github.com/CQuIC/NanofiberPaper2014/releases" target="_blank">Download</a>
 </li> 
  <li>
-<a href="http://dx.doi.org/10.1103/PhysRevA.93.023817" target="_blank">Link</a>
+<a href="https://dx.doi.org/10.1103/PhysRevA.93.023817" target="_blank">Link</a>
 </li>
 
 <li>
-<a href="http://arxiv.org/abs/1509.02625 " target="_blank">arXiv</a>
+<a href="https://arxiv.org/abs/1509.02625 " target="_blank">arXiv</a>
 </li>
 
 <li>
@@ -280,7 +280,7 @@ We study the strong coupling between photons and atoms that can be achieved in a
 </li>
 
 <li>
-<a href="http://dx.doi.org/10.1007/s11801-011-0137-5" target="_blank">Link</a>
+<a href="https://dx.doi.org/10.1007/s11801-011-0137-5" target="_blank">Link</a>
 </li>
 
 
@@ -320,7 +320,7 @@ The whispering-gallery-mode (WGM) photonic crystal microcavity can be potentiall
 
 
 <li>
-<a href="http://arxiv.org/abs/1111.5532" target="_blank">arXiv</a>
+<a href="https://arxiv.org/abs/1111.5532" target="_blank">arXiv</a>
 </li>
 
 <!---->
@@ -541,7 +541,7 @@ The principles and structures of Surface-emitting Distributed-feedback Bragg(SE-
 </li>
 
 <li>
-<a href="http://dx.doi.org/10.1007/s11431-008-0309-0" target="_blank">Link</a>
+<a href="https://dx.doi.org/10.1007/s11431-008-0309-0" target="_blank">Link</a>
 </li>
 
 
@@ -660,15 +660,15 @@ This thesis presents a theoretical study of the collective effects of a large nu
   <p>
   <i class="ai ai-impactstory"></i><a href="https://impactstory.org/u/0000-0002-3357-089X"> ImpactStory </a>
   <br/>
-  <i class="ai ai-google-scholar"></i><a href="http://scholar.google.com/citations?hl=en&user=6FdqHlIAAAAJ&hl"> Google Scholar </a>
+  <i class="ai ai-google-scholar"></i><a href="https://scholar.google.com/citations?hl=en&user=6FdqHlIAAAAJ&hl"> Google Scholar </a>
   <br/>
-  <i class="ai ai-orcid"></i><a property="http://purl.org/spar/datacite/orcid"
+  <i class="ai ai-orcid"></i><a property="https://purl.org/spar/datacite/orcid"
      href="https://orcid.org/0000-0002-3357-089X"
      onclick="recordOutboundLink(this, 'Link', '| + input + |'); return false;" > ORCID: 0000-0002-3357-089X</a>
   </p>
   <br/>
   <br/>
-  <p></i><a href="http://i2000s.github.io/CV-XiaodongQi.pdf"
+  <p></i><a href="https://www.qixiaodong.tk/CV-XiaodongQi.pdf"
      onclick="var that=this;
      _gaq.push(['_trackEvent','Download','PDF',this.href]);
      setTimeout(function(){location.href=that.href;},200);
@@ -685,25 +685,25 @@ This thesis presents a theoretical study of the collective effects of a large nu
          <div class="row">
             <div class="col-md-7 col-xs-9">
               <div class="row">
-               <a href="mailto:i2000s@hotmail.com" onClick="recordOutboundLink(this, 'Outbound Links', 'email'); return false;"><img src="/assets/img/icon-email.png" height="48px" alt="email"> </a>
-               <a href="https://github.com/i2000s" onClick="recordOutboundLink(this, 'Outbound Links', 'Github'); return false;"><img src="/assets/img/icon-github.png" height="40px" alt="github"> </a>
-               <a href="https://plus.google.com/+XiaodongQi"><img src="/assets/img/icon-gplus.png" height="40px" alt="G+"></a>
-               <a href="https://www.facebook.com/i2000s"><img src="/assets/img/icon-facebook.png" height="42px" alt="facebook"></a>
-               <a href="https://scholar.google.com/citations?user=6FdqHlIAAAAJ&hl=en"><img src="/assets/img/icon-scholar.png" height="40px" alt="GoogleScholar"></a>
-               <a href="https://twitter.com/i2000s"><img src="/assets/img/icon-twitter.png" height="45px" alt="Twitter"></a>
-               <a href="https://www.linkedin.com/in/xiaodongqi"><img src="/assets/img/icon-linkedin.png" height="40px" alt="LinkedIn"></a>
-               <a href="/atom.xml" onClick="recordOutboundLink(this, 'Outbound Links', 'RSS'); return false;"><img src="/assets/img/icon-rss.png" height="40px" alt="feed"></a>
-               <a href="https://physics.stackexchange.com/users/37682/xiaodong-qi"><img src="/assets/img/icon-stackoverflow.png" height="40px" alt="Physics Stackexchange"></a>
+               <a href="mailto:i2000s@hotmail.com" onClick="recordOutboundLink(this, 'Outbound Links', 'email'); return false;"><img src="https://www.qixiaodong.tk/assets/img/icon-email.png" height="48px" alt="email"> </a>
+               <a href="https://github.com/i2000s" onClick="recordOutboundLink(this, 'Outbound Links', 'Github'); return false;"><img src="https://www.qixiaodong.tk/assets/img/icon-github.png" height="40px" alt="github"> </a>
+               <a href="https://plus.google.com/+XiaodongQi"><img src="https://www.qixiaodong.tk/assets/img/icon-gplus.png" height="40px" alt="G+"></a>
+               <a href="https://www.facebook.com/i2000s"><img src="https://www.qixiaodong.tk/assets/img/icon-facebook.png" height="42px" alt="facebook"></a>
+               <a href="https://scholar.google.com/citations?user=6FdqHlIAAAAJ&hl=en"><img src="https://www.qixiaodong.tk/assets/img/icon-scholar.png" height="40px" alt="GoogleScholar"></a>
+               <a href="https://twitter.com/i2000s"><img src="https://www.qixiaodong.tk/assets/img/icon-twitter.png" height="45px" alt="Twitter"></a>
+               <a href="https://www.linkedin.com/in/xiaodongqi"><img src="https://www.qixiaodong.tk/assets/img/icon-linkedin.png" height="40px" alt="LinkedIn"></a>
+               <a href="/atom.xml" onClick="recordOutboundLink(this, 'Outbound Links', 'RSS'); return false;"><img src="https://www.qixiaodong.tk/assets/img/icon-rss.png" height="40px" alt="feed"></a>
+               <a href="https://physics.stackexchange.com/users/37682/xiaodong-qi"><img src="https://www.qixiaodong.tk/assets/img/icon-stackoverflow.png" height="40px" alt="Physics Stackexchange"></a>
                <iframe class="github-btn" src="//ghbtns.com/github-btn.html?user=i2000s&repo=i2000s.github.io&type=star&count=true&size=large" allowtransparency="true" frameborder="0" scrolling="0" width="150px" height="40px" style="vertical-align:middle; margin-top:9px;"></iframe>
               </div>
               <div class="row">
-                <span> &nbsp; </span> <span><a href="/CV-XiaodongQi.pdf"
+                <span> &nbsp; </span> <span><a href="https://www.qixiaodong.tk/CV-XiaodongQi.pdf"
                   onclick="var that=this;
                   _gaq.push(['_trackEvent','Download','PDF',this.href]);
                   setTimeout(function(){location.href=that.href;},200);
                   return false;" class = "btn btn-default"><i class="fa fa-file-text-o fa-1x"></i> CV of Xiaodong Qi</a></span>
                 <br><img alt="Creative Commons License" style="border-width:0" align="right" src="https://licensebuttons.net/l/by/3.0/88x31.png" />
-                <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Content</span> is licensed under the
+                <span xmlns:dct="https://purl.org/dc/terms/" property="dct:title">Content</span> is licensed under the
                 <a rel="license" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution License</a> or otherwise specified.
                 <br>
               </div>
@@ -711,7 +711,7 @@ This thesis presents a theoretical study of the collective effects of a large nu
 
            <div class="col-md-4 col-xs-3">
               <div class="row team-member" style="margin-top:-35px">
-              <img class="img-responsive img-thumbnail img-circle" width="200px" alt="" src="/assets/img/qi2016.jpg" align="middle">
+              <img class="img-responsive img-thumbnail img-circle" width="200px" alt="" src="https://www.qixiaodong.tk/assets/img/qi2016.jpg" align="middle">
               </div>
            </div>
          </div>
@@ -744,9 +744,9 @@ This thesis presents a theoretical study of the collective effects of a large nu
     <!-- Placed at the end of the document so the pages load faster -->
     <!-- JQuery, used on a few pages as well as Bootstrap's Javascript plugins -->
     <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js" ></script>-->
-    <script src="//ajax.aspnetcdn.com/ajax/jQuery/jquery-3.1.0.min.js"></script>
+    <script src="//ajax.aspnetcdn.com/ajax/jQuery/jquery-2.2.4.min.js"></script>
     <script src="//cdn.jsdelivr.net/jquery.mixitup/latest/jquery.mixitup.min.js"></script>
-    <script src="/assets/js/mixitup-mine.js"></script>
+    <script src="https://www.qixiaodong.tk/assets/js/mixitup-mine.js"></script>
     <!-- Equations using MathJax -->
     <script type="text/javascript" src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <script type="text/x-mathjax-config"> MathJax.Hub.Config({ TeX: { equationNumbers: {autoNumber: "all"} } });       </script>
@@ -789,7 +789,7 @@ This thesis presents a theoretical study of the collective effects of a large nu
     //});
     </script>
     <!-- Twitter Bootstrap Javascript -->
-    <script src="/assets/js/bootstrap-collapse.js"></script> <!-- for collapsing navbar-->
+    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-collapse.js"></script> <!-- for collapsing navbar-->
     <!-- Unused Twitter Bootstrap Javascript
     <script src="https://www.qixiaodong.tk/assets/js/bootstrap-dropdown.js"></script>
     <script src="https://www.qixiaodong.tk/assets/js/google-code-prettify/prettify.js"></script>
@@ -809,7 +809,7 @@ This thesis presents a theoretical study of the collective effects of a large nu
     <!--<script src = "https://code.jquery.com/jquery.js"></script>-->
 
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src = "/assets/js/bootstrap.min.js"></script>
+    <script src = "https://www.qixiaodong.tk/assets/js/bootstrap.min.js"></script>
 
   </body>
 </html>
