--- a/search.html
+++ b/search.html
@@ -31,7 +31,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/README.html"><i class="glyphicon glyphicon-info-sign"></i></a>
+      <a class="navbar-brand" href="https://www.qixiaodong.tk/README.html"><i class="glyphicon glyphicon-info-sign"></i></a>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -59,7 +59,7 @@
          
         </ul>
       <!-- Search site using Google's index -->
-        <form class="navbar-form navbar-right" role="search" method="get" action="http://google.com/search">
+        <form class="navbar-form navbar-right" role="search" method="get" action="https://google.com/search">
           <div class="form-group">
             <input type="hidden" name="q" value="site:https://www.qixiaodong.tk" />
             <input type="text" class="form-control search-query" name="q" placeholder="Search this site"/>
@@ -108,13 +108,13 @@
 
           <div class="row">
             <div class="span2">
-             <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=i2000s&repo=i2000s.github.io&type=star&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="98px" height="20px" style="vertical-align:middle; margin-top:9px;"></iframe>
+             <iframe class="github-btn" src="https://ghbtns.com/github-btn.html?user=i2000s&repo=i2000s.github.io&type=star&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="98px" height="20px" style="vertical-align:middle; margin-top:9px;"></iframe>
             </div>
             <div class="span1 offset8">
               <a rel="license" href="https://creativecommons.org/licenses/by/4.0/"><img src="https://licensebuttons.net/l/by/4.0/88x31.png" style="float:left;margin:0 5 0 0;" alt="CC0" /></a>
             </div>
             <div class="span1">
-              <a rel=license href="http://onsclaims.wikispaces.com/"><img align="right" alt="ONS" style="border-width: 0pt;" src="http://onsclaims.wikispaces.com/file/view/ons-sci2-icon.png"> </a><br/>
+              <a rel=license href="https://onsclaims.wikispaces.com/"><img align="right" alt="ONS" style="border-width: 0pt;" src="https://onsclaims.wikispaces.com/file/view/ons-sci2-icon.png"> </a><br/>
               </br>
               </br>
             </div>
@@ -128,15 +128,15 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <!-- search using tipuesearch -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js" ></script>
+    <script src="//ajax.aspnetcdn.com/ajax/jQuery/jquery-2.2.4.min.js" ></script>
     <script type="text/javascript" src="https://www.qixiaodong.tk/assets/js/tipuesearch_set.js"></script>
     <script type="text/javascript" src="https://www.qixiaodong.tk/assets/js/tipuesearch_data.js"></script>
     <script type="text/javascript" src="https://www.qixiaodong.tk/assets/js/tipuesearch.js"></script>
     <!-- Equations using MathJax -->
-    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <script type="text/x-mathjax-config"> MathJax.Hub.Config({ TeX: { equationNumbers: {autoNumber: "all"} } });       </script>
     <!-- A little twitter link -->
-    <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+    <script type="text/javascript" src="https://platform.twitter.com/widgets.js"></script>
     <!--
     <script src="https://www.qixiaodong.tk/assets/js/google-code-prettify/prettify.js"></script>
     <script src="https://www.qixiaodong.tk/assets/js/bootstrap-transition.js"></script>
